# personal_assistant

./: .env.example  .gitignore  AGENTS.md  DISTRIBUTION.md  README.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/calendar/add-event/: route.ts
app/api/calendar/today/: route.ts
app/api/chat/: route.ts
app/api/gmail/pending/: route.ts
components/: BriefingPanel.tsx  ChatPanel.tsx  GoalTracker.tsx  SignInScreen.tsx
lib/: auth.ts  google.ts  types.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Archive.tsx  BriefingPanel.tsx  ChatPanel.tsx  GoalTracker.tsx  LinkifiedText.tsx  LocalCalendar.tsx  PencilIcon.tsx  PlanDayEditor.tsx  PlanOptionsModal.tsx  Settings.tsx  SignInScreen.tsx
src/lib/: anthropic.ts  auth.ts  briefing.ts  chat.ts  db.ts  demo.ts  distill.ts  emailTasks.ts  errors.ts  fileTasks.ts  goals.ts  google.ts  gptSearch.ts  init.ts  llm.ts  localCalendar.ts  memory.ts  msAuth.ts  openExternal.ts  planExport.ts  planning.ts  plans.ts  providers.ts  store.ts  teams.ts  teamsTasks.ts  types.ts
src/styles/: globals.css
